# purplle-store-intelligence

./: .dockerignore  .env.example  CAMERA_ROLE_ANALYSIS.md  DEMO.md  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
analytics/: README.md  engine.py  reporting.py  transformers.py
analytics/tests/: test_analytics_engine.py
app/: __init__.py
app/api/: README.md  main.py
app/database/: connection.py
app/schemas/: __init__.py  analytics.py  anomaly.py  event.py  funnel.py  metrics.py
app/services/: __init__.py  analytics_service.py  anomaly_service.py  dashboard_service.py  detection_service.py  funnel_service.py  ingestion_service.py  metrics_service.py
config/: store_zones.yaml
dashboard/backend/: README.md
dashboard/frontend/: DASHBOARD_REVIEW.md  README.md  index.html  package-lock.json  package.json
docker/: Dockerfile.backend  Dockerfile.dashboard  backend-entrypoint.sh  docker-compose.yml
pipeline/: README.md  __init__.py  analytics.py  challenge_export.py  detect.py  events.py  ingest_api.py  pos_ingest.py  run.py  sessions.py  tracker.py  zones.py
pipeline/config/: settings.py
pipeline/detection/: __init__.py  feature_extraction.py  ingest.py  output.py  preprocess.py
pipeline/tests/: test_challenge_export.py  test_detection_pipeline.py  test_ingest_api.py
scripts/: migrate_db.sh  run_pipeline.sh  start_backend.sh  start_dashboard.sh  test.sh
submission/: ARCHITECTURE.md  CHOICES.md  DESIGN.md  E2E_VALIDATION.md  EVENT_SCHEMA_VALIDATION.md  PROJECT_STATUS.md
tests/: README.md
tests/unit/: test_api.py  (+11 more)
(+22 files in other folders)
