[project]
name = "purplle-store-intelligence"
version = "0.1.0"
description = "Store Intelligence System for Purplle Tech Challenge."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0",
  "pydantic>=2.8",
  "psycopg2-binary>=2.9",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
